--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
   </head>
   <body>
     <div id="outcome-bar">
-      <div class="win"></div>
-      <div class="loss"></div>
-      <div class="tie"></div>
-      <div class="undetermined"></div>
     </div>
     <div id="selection-bar">
       <button id="select-rock">Rock</button>
@@ -18,5 +14,7 @@
       <button id="select-scissors">Scissors</button>
     </div>
     <span id="debug-readout">Waiting for JS to take over...</span>
+    <span id="jumbotron">Select an option!</span>
+    <a id="credits-button" href="/credits" target="_blank">Credits...</a>
   </body>
 </html>
