deleting a singular character
(credits link was busted)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </div>
     <span id="debug-readout">Waiting for JS to take over...</span>
     <span id="jumbotron">Select an option!</span>
-    <a id="credits-button" href="/credits" target="_blank">Credits...</a>
+    <a id="credits-button" href="credits" target="_blank">Credits...</a>
   </body>
 </html>
